@@ -21,6 +21,7 @@
 
 package io.crate.planner.projection;
 
+import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
 import io.crate.analyze.symbol.Symbol;
@@ -42,8 +43,10 @@ public abstract class AbstractIndexWriterProjection extends Projection {
 
     private final static List<Symbol> OUTPUTS = ImmutableList.<Symbol>of(new Value(DataTypes.LONG));  // number of rows imported
 
-    private final static String BULK_SIZE = "bulk_size";
-    private final static int BULK_SIZE_DEFAULT = 10000;
+    private static final String BULK_SIZE = "bulk_size";
+
+    @VisibleForTesting
+    public static final int BULK_SIZE_DEFAULT = 10000;
 
     private Integer bulkActions;
     protected TableIdent tableIdent;
